--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "create-express-framework",
   "version": "1.0.0",
   "description": "first step to create Express FrameWork in NodeJS tutorial",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --inspect index.js",
+    "start": "nodemon --inspect src/index.js",
+    "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,9 +24,16 @@
   },
   "homepage": "https://github.com/binhlethanh201/nodejs_tutorial#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "bootstrap": "^5.3.6",
+    "express": "^5.1.0",
+    "express-handlebars": "^8.0.1",
+    "method-override": "^3.0.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "mongoose": "^7.8.7",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10",
+    "sass": "^1.89.0"
   }
 }
